# AutoMet

./: .gitignore  README.md  pyproject.toml
automet/: __init__.py  afm.py  base.py  hysteresis.py  ir.py  profilometer.py  sem.py  utils.py  xrd.py
tests/: test_afm.py  test_base.py  test_hysteresis.py  test_ir.py  test_profilometer.py  test_sem.py  test_utils.py  test_xrd.py
