[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automet"
version = "0.1.0"
description = "Automated materials characterization analysis package"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "seaborn",
    "yellowbrick",
    "igor2",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["automet*"]
